Changes made to Website

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+  <nav id="desktop-nav">
+    <div class="logo">Calculator</div>
+  </nav>
   <div class="calculator-grid">
     <div class="output">
       <div data-previous-operand class="previous-operand"></div>
@@ -33,5 +36,10 @@
     <button data-number>0</button>
     <button data-equals class="span-two">=</button>
   </div>
+  <footer>
+    <nav>
+      <p>Copyright &#169; 2023 Chanchal Vishwakarma. All Rights Reserved.</p>
+    </nav>
+  </footer>
 </body>
 </html>
